--- a/src/login.html
+++ b/src/login.html
@@ -2,15 +2,16 @@
 <html lang="en-US">
 <head>
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
-        <img src="./images/hotel-logo.svg" alt="A hotel on top of a mountain with a train ascending to it">
-        <label for="username">User Name:</label>
-        <input name="username" type="text">
-        <label for="password">Password:</label>
-        <input name="password" type="password">
-        <button>Submit</button>
+    <section class="login">
+        <img class="login-img" src="./images/hotel-logo.svg" alt="A hotel on top of a mountain with a train ascending to it">
+        <form class="login-form">
+            <input class="login-username" name="username" type="text" placeholder="Username" aria-label="User Name">
+            <input class="login-password" name="password" type="password" placeholder="Password" aria-label="Password">
+            <button class="login-submit">Submit</button>
+        </form>
     </section>
 </body>
 </html>
