Restructure data fetch to single promise.all return

--- a/src/login.html
+++ b/src/login.html
@@ -13,5 +13,17 @@
             <button class="login-submit">Submit</button>
         </form>
     </section>
+    <!-- <section class="main">
+        <nav class="nav">
+            <img class="nav-logo" src="./images/hotel-logo.svg"
+                alt="A hotel on top of a mountain with a train ascending to it">
+            <button class="nav-booking nav-btn">Your Bookings</button>
+            <button class="nav-account nav-btn">Your Account</button>
+            <button class="nav-reservation nav-btn">Make A Reservation</button>
+        </nav>
+        <section class="dashboard">
+            <p class="dashboard-hold">Under Construction</p>
+        </section>
+    </section> -->
 </body>
 </html>
