Fix login error jumping bug

--- a/src/base.html
+++ b/src/base.html
@@ -8,7 +8,7 @@
     <section class="login">
         <img class="login-img" src="./images/hotel-logo.svg" alt="A hotel on top of a mountain with a train ascending to it">
         <form class="login-form">
-            <h3 class="login-alerts"></h3>
+            <h3 class="login-alerts">Please enter a valid username & password</h3>
             <input class="login-username" name="username" type="text" placeholder="Username" aria-label="User Name">
             <input class="login-password" name="password" type="password" placeholder="Password" aria-label="Password">
             <button class="login-submit">Submit</button>
